--- a/easyframework-admin/.classpath
+++ b/easyframework-admin/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="templates/admin/|templates/admin/main/|templates/admin/user/|templates/" kind="src" path="src/main/resources"/>
+	<classpathentry excluding="templates/admin/|templates/admin/main/|templates/admin/user/|templates/|mapper/" kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
